--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
 playwright==1.44.0
+playwright-stealth==2.0.0
 httpx==0.27.0
 python-multipart==0.0.9
 google-cloud-storage==2.16.0
